RESOLVED FIXED115264
[WK2] Blobs are not associated with connection when there are no sandbox extensions
https://bugs.webkit.org/show_bug.cgi?id=115264
Summary [WK2] Blobs are not associated with connection when there are no sandbox exte...
Alexey Proskuryakov
Reported 2013-04-26 10:36:54 PDT
Patch forthcoming.
Attachments
proposed fix (1.92 KB, patch)
2013-04-26 10:45 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2013-04-26 10:45:28 PDT
Created attachment 199842 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-04-26 10:50:15 PDT
Note You need to log in before you can comment on or make changes to this bug.