        Blobs are not associated with connection when there are no sandbox extensions         https://bugs.webkit.org/show_bug.cgi?id=115264

Reviewed by Brady Eidson.

        Covered by multiple fast/files tests when using NetworkProcess.

        * NetworkProcess/FileAPI/NetworkBlobRegistry.cpp:
        (WebKit::NetworkBlobRegistry::registerBlobURL): Fixed a logic error.



Canonical link: https://commits.webkit.org/133692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149196 268f45cc-cd09-0410-ab3c-d52691b4dbfc